# ChangeLog for dev-ml/postgresql-ocaml
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/postgresql-ocaml/ChangeLog,v 1.29 2012/10/10 11:35:32 aballier Exp $

*postgresql-ocaml-2.0.2 (10 Oct 2012)

  10 Oct 2012; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-2.0.2.ebuild:
  version bump

  22 May 2012; Jeff Horelick <jdhore@gentoo.org>
  postgresql-ocaml-1.18.0.ebuild:
  marked x86 per bug 416535

  23 Feb 2012; Alexis Ballier <aballier@gentoo.org>
  -postgresql-ocaml-1.17.0.ebuild:
  remove old

*postgresql-ocaml-1.18.0 (16 Jan 2012)

  16 Jan 2012; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-1.18.0.ebuild:
  version bump

*postgresql-ocaml-1.17.0 (31 Dec 2011)

  31 Dec 2011; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-1.17.0.ebuild:
  version bump

  24 Jul 2011; Alexis Ballier <aballier@gentoo.org>
  -postgresql-ocaml-1.4.6.ebuild, -postgresql-ocaml-1.14.0.ebuild:
  remove old

  23 Jul 2011; Markus Meier <maekke@gentoo.org> postgresql-ocaml-1.16.0.ebuild:
  x86 stable, bug #374975

*postgresql-ocaml-1.16.0 (24 May 2011)

  24 May 2011; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-1.16.0.ebuild:
  versin bump

  21 Jan 2011; Alexis Ballier <aballier@gentoo.org>
  -postgresql-ocaml-1.12.5.ebuild, -postgresql-ocaml-1.13.0.ebuild,
  -postgresql-ocaml-1.13.1.ebuild:
  remove old

*postgresql-ocaml-1.14.0 (01 Jan 2011)

  01 Jan 2011; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-1.14.0.ebuild:
  version bump

*postgresql-ocaml-1.13.1 (16 Dec 2010)

  16 Dec 2010; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-1.13.1.ebuild:
  version bump

*postgresql-ocaml-1.13.0 (21 Oct 2010)

  21 Oct 2010; Alexis Ballier <aballier@gentoo.org>
  +postgresql-ocaml-1.13.0.ebuild:
  version bump

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org>
  postgresql-ocaml-1.4.6.ebuild, postgresql-ocaml-1.12.5.ebuild: