@@ -6,13 +6,13 @@ DIST postgresql-ocaml-1.18.0.tar.gz 45820 SHA256 ec52fd469cf06aabd67d79cadedc153
 DIST postgresql-ocaml-2.0.2.tar.gz 75698 SHA256 b9007e472dd2836a9d044ca09546bd3bfc91e331204d99b55da261f5f0fac68f SHA512 5deb3210783753b71bd958e693be070453be378aa820875cb62e01cbaaaf111bec2043227e6bdfbfeaf7e2d94ad364e741b667f678f8d0124893229af29c7d3b WHIRLPOOL 658f6543e8c4f22a87d31346037761bb7ce8326028bedecbc3990613cb16614d1ac8ccdf6fc1a8cf8ad6bdd33646113e003f9d1d59fec1f506c184d9f2a6399f
 EBUILD postgresql-ocaml-1.16.0.ebuild 1117 SHA256 56dffb5fa46b3532c520a52174f277126ddc7cc3f872cd2e181ca48450697290 SHA512 007c5b747ce1c3b398e35dd8f696920fe2b48873b7e305bbd1e675df269038591c1f49724d24c8ee773864fe0ad63556b01aad1d16f8d156f0d08bfcf9051cd2 WHIRLPOOL 30fd22ad254b2fd5f24a65c51fbe00fcd58a3e5de141cdf53a49374bf92787fd06620edc75ca42a2eae6be3f634c7d2ff7feefaf166b52fd293c5af4e1e94867
 EBUILD postgresql-ocaml-1.18.0.ebuild 1117 SHA256 1ce7d2965409cabb33402f774ea123e66715b4cdaf25bf2f568d908c40e1f69a SHA512 f81343d8de4ad780cd465aeffe3b4e0ed72f5a703ff5fc576d69409c8d720f2e8fa77a49027b59e16dae20c83d701897ec49c8e6c12e574a1ca87cfb6ee7699a WHIRLPOOL 8389054a86391dcaff1746769e9e1481b2cc930b78fb7ff6bd86f2205a4e6944760f4d3c3722526cfa0b89943d7734d29bf932c26911544193d6298d98afe17b
-EBUILD postgresql-ocaml-2.0.2.ebuild 845 SHA256 bcea6dde0855449510ca22ef6fb06c683d5af2531717af0585516dd9f4539181 SHA512 8d54e6b0763992b86126ac45fca9aad6d76b3e82d3fe03c3ffa4cb3ad324a1cbb4fba59383fdb6dc4050e1703d76f5262980613adc1eb99ed84fcd3d74a4e583 WHIRLPOOL 0ac57561edc3617638a3bd5fafae45c001a045dfbc2b32db0d7fa9e30be5c2f7c44e392ee9f00842b5cb5d3280164625c50d772a036978d10b5c11c3745590a6
-MISC ChangeLog 4313 SHA256 3e5e1e9d735aed0432d940c1f99dc1dd5b8a124d43a34769ceb0d1f02507d111 SHA512 66478ccecb7ff8bd4c16fd6cb55f1f9fe0bee753a757b2a36c91a3247d4b68f1a4082a191b84f1d351cf81e2d5f6d716feb89e79ec0eba05ff2926d1039cde51 WHIRLPOOL c36db6b8a6f86a3497e546a7ad8ee8d4c074cf907d3c81232e6259033f25c1b46d733e925aa76fa8e6a39bf2476967db0c15f5b6e5873e2c1b18965b243fcb6f
+EBUILD postgresql-ocaml-2.0.2.ebuild 817 SHA256 73ab5b5bdedf8e4a75f660220ae39a5f5b6c3629b3dca3022a6682041bf51d49 SHA512 0631a0c68ade928dc7787f872fc47ddfff1d44458b91d789d8ef832fa3bb4c11ad90cb9df53b78f98b0e61f43ade6c7446ab1e79feb6e45a0c29894487e0700e WHIRLPOOL 847e70eb9d5475c0aebe18ee49b07978e4a931fbcb6a45d80ab54442c9f5af68c548573812a830539292910a566e5aadc2d344569fd2a20d7d1a370641c6b058
+MISC ChangeLog 4432 SHA256 563581785fb5d17889350c31fc97add0154cde0671f0ffef70701f81bf7b61a7 SHA512 9316bd6004a01ac10f438d6ccb065eacd398576cde88a0902d5e8e5aec8bd22e475e7f9d9e4427506b9e785de5db618e4d81c952454eb5f134c5f605cb5b4fc4 WHIRLPOOL bf8cbc6d9b75de48aaed821078797f81ee2d2cdd99514c388a6179c821e42dc4ed81d2d0434dedfc1b12ab9737545e60bcbf9bba7f5e431582f30843df441e11
 MISC metadata.xml 157 SHA256 d14b8b08774f2a40f42d70ff40b1b4f1c4725e7095d702143a32909553eac799 SHA512 5e4a17ffdcc021c3d28f9ac71f8ec0b35a243e269281ba7db2e17845d7990221040ab16db6fa13c708f7d8db154d8d65d2d7f80f3a7dd84bc001449369738f2f WHIRLPOOL 79ae48d5df04eab0d90848c85d48c62b0e3901cc5c9a74d0b85de5becac5de0f55a3c9c719bf716bb757cfd8be306a222f247a0749fb346f6589893698b25c63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlB1XYYACgkQvFcC4BYPU0qCzgCeN9XXQ0KSV6c3sNEtjx12pViK
-g68An3zosX/goAsd2N19x9cTp+H/jGEF
-=yw4L
+iEYEAREIAAYFAlEYYQwACgkQvFcC4BYPU0qnrwCgjopuPV64M318dSGOl+ayAFeX
+2zsAn3m5LBbWGivE+0w1QvVoOw6WdKgs
+=ywvA
 -----END PGP SIGNATURE-----
