@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/postgresql-ocaml/postgresql-ocaml-2.0.2.ebuild,v 1.1 2012/10/10 11:35:32 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/postgresql-ocaml/postgresql-ocaml-2.0.2.ebuild,v 1.2 2013/02/11 03:10:03 aballier Exp $
 
-EAPI=4
+EAPI=5
 
 OASIS_BUILD_DOCS=1
 
@@ -13,12 +13,11 @@ SRC_URI="http://bitbucket.org/mmottl/postgresql-ocaml/downloads/${P}.tar.gz"
 HOMEPAGE="http://bitbucket.org/mmottl/postgresql-ocaml"
 IUSE="examples"
 
-DEPEND=">=dev-lang/ocaml-3.11[ocamlopt?]
-	dev-db/postgresql-base
+DEPEND="dev-db/postgresql-base
 	dev-db/postgresql-server"
 RDEPEND="${DEPEND}"
 
-SLOT="0"
+SLOT="0/${PV}"
 LICENSE="LGPL-2"
 KEYWORDS="~amd64 ~ppc ~x86"
 
